--- a/bench/function/simd/bitwise_not/CMakeLists.txt
+++ b/bench/function/simd/bitwise_not/CMakeLists.txt
@@ -9,8 +9,8 @@
 ## benches for functor bitwise_not in simd mode.
 
 set(SOURCES
-  regular.float.m10_10_m10_10.cpp
-  regular.double.m10_10_m10_10.cpp
+  regular.float.m10_10.cpp
+  regular.double.m10_10.cpp
 )
 
 make_bench("function.simd.bitwise_not" ${SOURCES})
