Cleanup more rounding functions tests and benchmarks

--- a/bench/function/scalar/CMakeLists.txt
+++ b/bench/function/scalar/CMakeLists.txt
@@ -122,7 +122,8 @@ set(SOURCES
     ffs.cpp
     firstbitset.cpp
     firstbitunset.cpp
-    floor.cpp
+    floor.regular.cpp
+    floor.std.cpp
     fma.regular.cpp
     fma.std.cpp
     fms.cpp
