--- a/test/doc/range/CMakeLists.txt
+++ b/test/doc/range/CMakeLists.txt
@@ -6,8 +6,15 @@
 ##                            http://www.boost.org/LICENSE_1_0.txt
 ##===================================================================================================
 
-add_subdirectory(arithmetic)
-add_subdirectory(hyperbolic)
-add_subdirectory(predicates)
-add_subdirectory(trigonometric)
-add_subdirectory(swar)
+SET( SOURCES
+    aligned_input_range.cpp
+    input_range.cpp
+    reduce.simple.cpp
+    reduce.phases.cpp
+    reduce.phase.cpp
+    segmented_input_range.cpp
+    transform.unary.cpp
+    transform.binary.cpp
+  )
+
+make_unit( "doc.range" ${SOURCES})
