--- a/test/doc/hyperbolic/CMakeLists.txt
+++ b/test/doc/hyperbolic/CMakeLists.txt
@@ -9,6 +9,20 @@
 SET( SOURCES
     direct_hyperbolic.cpp
     inverse_hyperbolic.cpp
+    acosh.cpp
+    acoth.cpp
+    acsch.cpp
+    asech.cpp
+    asinh.cpp
+    atanh.cpp
+    cosh.cpp
+    coth.cpp
+    csch.cpp
+    sech.cpp
+    sinhc.cpp
+    sinhcosh.cpp
+    sinh.cpp
+    tanh.cpp
   )
 
 make_unit( "doc.hyperbolic" ${SOURCES})
