--- a/test/doc/arithmetic/CMakeLists.txt
+++ b/test/doc/arithmetic/CMakeLists.txt
@@ -6,8 +6,11 @@
 ##                            http://www.boost.org/LICENSE_1_0.txt
 ##===================================================================================================
 
-add_subdirectory(arithmetic)
-add_subdirectory(hyperbolic)
-add_subdirectory(predicates)
-add_subdirectory(trigonometric)
-add_subdirectory(swar)
+SET( SOURCES
+    saturated_abs.cpp
+    roundings.cpp
+    divisions.cpp
+    remainders.cpp
+  )
+
+make_unit( "doc.arithmetic" ${SOURCES})
