--- a/cmake/ConfigVersion.cmake.in
+++ b/cmake/ConfigVersion.cmake.in
@@ -1,19 +1,23 @@
 ## Copyright 2017 - NumScale SAS
 ## -------------------------------------------------------------------------------------------------
-
+##
 ## Requirements for cmake's version configuration file:
-## - PACKAGE_{VERSION,VERSION_EXACT,VERSION_COMPATIBLE}
+##
+##   PACKAGE_VERSION
+##   PACKAGE_VERSION_EXACT
+##   PACKAGE_VERSION_COMPATIBLE
+##
 ## -------------------------------------------------------------------------------------------------
 
-## Given by the master's cmake
+##
 set(MAJOR_VERSION @PROJECT_MAJOR_VERSION@)
 set(MINOR_VERSION @PROJECT_MINOR_VERSION@)
 set(PATCH_VERSION @PROJECT_SUBMINOR_VERSION@)
 
-## The version
+##
 set(PACKAGE_VERSION ${MAJOR_VERSION}.${MINOR_VERSION}.${SUBMINOR_VERSION}.${SUBSUBMINOR_VERSION})
 
-## Check each components and report if they exists and if they matched
+## Check each version components and report if they exists and if they matched
 ## -------------------------------------------------------------------------------------------------
 if (PACKAGE_FIND_VERSION_MAJOR)
   set(_major true)
@@ -35,7 +39,6 @@ if (PACKAGE_FIND_VERSION_PATCH)
     set(_patch_matched true)
   endif()
 endif()
-## -------------------------------------------------------------------------------------------------
 
 ## We want to be strict, so we strictly check for each version components, if one fails, then we
 ## assume that the current version is incompatible...
@@ -66,4 +69,3 @@ if (NOT PACKAGE_VERSION_UNSUITABLE AND _major)
     set(PACKAGE_VERSION_UNSUITABLE true)
   endif()
 endif()
-## -------------------------------------------------------------------------------------------------
