--- a/cmake/Boost.SIMDConfig.cmake.in
+++ b/cmake/Boost.SIMDConfig.cmake.in
@@ -1,4 +1,8 @@
 ## Copyright 2017 - NumScale SAS
+##
+## Distributed under the Boost Software License, Version 1.0.
+## (See accompanying file LICENSE.md or copy at http://boost.org/LICENSE_1_0.txt)
+##
 ## -------------------------------------------------------------------------------------------------
 ##
 ##
@@ -18,12 +22,8 @@
 ##
 ## -------------------------------------------------------------------------------------------------
 
-##
-set(@PROJECT_NAME@_FOUND true)
-
 ## We do follow the same convention as FindBoost.cmake (unless for the `SUBSUBMINOR_VERSION` which
 ## is not in the version scheme of traditionnal Boost)
-## -------------------------------------------------------------------------------------------------
 set(@PROJECT_NAME@_VERSION             @PROJECT_VERSION@)
 set(@PROJECT_NAME@_MAJOR_VERSION       @PROJECT_MAJOR_VERSION@)
 set(@PROJECT_NAME@_MINOR_VERSION       @PROJECT_MINOR_VERSION@)
@@ -32,3 +32,11 @@ set(@PROJECT_NAME@_SUBSUBMINOR_VERSION @PROJECT_SUBSUBMINOR_VERSION@)
 
 ##
 set(@PROJECT_NAME@_INCLUDE_DIRS        ${CMAKE_INSTALL_PREFIX}/include/)
+
+##
+include(FindPackageHandleStandardArgs)
+find_package_handle_standard_args(@PROJECT_NAME@
+    FOUND_VAR     @PROJECT_NAME@_FOUND
+    REQUIRED_VARS @PROJECT_NAME@_INCLUDE_DIRS
+    VERSION_VAR   @PROJECT_NAME@_VERSION
+)
