--- a/cmake/Boost.SIMDConfigVersion.cmake.in
+++ b/cmake/Boost.SIMDConfigVersion.cmake.in
@@ -1,4 +1,8 @@
 ## Copyright 2017 - NumScale SAS
+##
+## Distributed under the Boost Software License, Version 1.0.
+## (See accompanying file LICENSE.md or copy at http://boost.org/LICENSE_1_0.txt)
+##
 ## -------------------------------------------------------------------------------------------------
 ##
 ## Requirements for cmake's version configuration file:
@@ -18,7 +22,6 @@ set(PATCH_VERSION @PROJECT_SUBMINOR_VERSION@)
 set(PACKAGE_VERSION ${MAJOR_VERSION}.${MINOR_VERSION}.${SUBMINOR_VERSION}.${SUBSUBMINOR_VERSION})
 
 ## Check each version components and report if they exists and if they matched
-## -------------------------------------------------------------------------------------------------
 if (PACKAGE_FIND_VERSION_MAJOR)
   set(_major true)
   if (${PACKAGE_FIND_VERSION_MAJOR} EQUAL ${MAJOR_VERSION})
@@ -42,7 +45,6 @@ endif()
 
 ## We want to be strict, so we strictly check for each version components, if one fails, then we
 ## assume that the current version is incompatible...
-## -------------------------------------------------------------------------------------------------
 if (NOT PACKAGE_VERSION_UNSUITABLE AND _major AND _minor AND _patch)
   if (_major_matched AND _minor_matched AND _patch_matched)
     set(PACKAGE_VERSION_EXACT      true)
