Add missing FindBoost.SIMD.cmake to install step

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,7 +111,7 @@ else ()
   set(CMAKE_CONFIG_INSTALL_DIR share/cmake/${PROJECT_NAME})
 endif()
 install(
-    FILES ${PROJECT_CMAKE_CONFIG} ${PROJECT_CMAKE_CONFIG_VERSION}
+    FILES ${PROJECT_CMAKE_CONFIG} ${PROJECT_CMAKE_CONFIG_VERSION} ${PROJECT_CMAKE_FIND}
     DESTINATION ${CMAKE_CONFIG_INSTALL_DIR}
 )
 
