base files and dirs for bitwise and exponential doc examples

--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -42,6 +42,8 @@ EXCLUDE_SYMBOLS        =
 EXAMPLE_PATH           = @PROJECT_SOURCE_DIR@/doc/examples
 EXAMPLE_PATH          += @PROJECT_SOURCE_DIR@/test/doc
 EXAMPLE_PATH          += @PROJECT_SOURCE_DIR@/test/doc/arithmetic
+EXAMPLE_PATH          += @PROJECT_SOURCE_DIR@/test/doc/bitwise
+EXAMPLE_PATH          += @PROJECT_SOURCE_DIR@/test/doc/exponential
 EXAMPLE_PATH          += @PROJECT_SOURCE_DIR@/test/doc/hyperbolic
 EXAMPLE_PATH          += @PROJECT_SOURCE_DIR@/test/doc/ieee
 EXAMPLE_PATH          += @PROJECT_SOURCE_DIR@/test/doc/predicates
