examples for bitwise

--- a/test/doc/bitwise/CMakeLists.txt
+++ b/test/doc/bitwise/CMakeLists.txt
@@ -7,7 +7,38 @@
 ##===================================================================================================
 
 SET( SOURCES
-
+    bits.cpp
+    bitwise_and.cpp
+    bitwise_andnot.cpp
+    bitwise_cast.cpp
+    bitwise_not.cpp
+    bitwise_notand.cpp
+    bitwise_notor.cpp
+    bitwise_or.cpp
+    bitwise_ornot.cpp
+    bitwise_select.cpp
+    bitwise_xor.cpp
+    clz.cpp
+    complement.cpp
+    ctz.cpp
+    ffs.cpp
+    firstbitset.cpp
+    firstbitunset.cpp
+    genmask.cpp
+    genmaskc.cpp
+    hi.cpp
+    ilog2.cpp
+    lo.cpp
+    popcnt.cpp
+    reversebits.cpp
+    rol.cpp
+    ror.cpp
+    rrol.cpp
+    rror.cpp
+    rshl.cpp
+    rshr.cpp
+    sbits.cpp
+    swapbytes.cpp
   )
 
 make_unit( "doc.bitwise" ${SOURCES})
