--- a/test/doc/CMakeLists.txt
+++ b/test/doc/CMakeLists.txt
@@ -13,5 +13,6 @@ add_subdirectory(exponential)
 add_subdirectory(hyperbolic)
 add_subdirectory(ieee)
 add_subdirectory(predicates)
+add_subdirectory(reduction)
 add_subdirectory(trigonometric)
 add_subdirectory(swar)
