doc and examples for eulerian

--- a/test/doc/eulerian/CMakeLists.txt
+++ b/test/doc/eulerian/CMakeLists.txt
@@ -6,14 +6,14 @@
 ##                            http://www.boost.org/LICENSE_1_0.txt
 ##===================================================================================================
 
-add_subdirectory(arithmetic)
-add_subdirectory(bitwise)
-add_subdirectory(boolean)
-add_subdirectory(exponential)
-add_subdirectory(eulerian)
-add_subdirectory(hyperbolic)
-add_subdirectory(ieee)
-add_subdirectory(predicates)
-add_subdirectory(reduction)
-add_subdirectory(trigonometric)
-add_subdirectory(swar)
+SET( SOURCES
+    erfc.cpp
+    erfcx.cpp
+    erf.cpp
+    gamma.cpp
+    gammaln.cpp
+    signgam.cpp
+    stirling.cpp
+   )
+
+make_unit( "doc.eulerian" ${SOURCES})
