--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -45,6 +45,7 @@ EXAMPLE_PATH          += @PROJECT_SOURCE_DIR@/test/doc/arithmetic
 EXAMPLE_PATH          += @PROJECT_SOURCE_DIR@/test/doc/bitwise
 EXAMPLE_PATH          += @PROJECT_SOURCE_DIR@/test/doc/boolean
 EXAMPLE_PATH          += @PROJECT_SOURCE_DIR@/test/doc/exponential
+EXAMPLE_PATH          += @PROJECT_SOURCE_DIR@/test/doc/eulerian
 EXAMPLE_PATH          += @PROJECT_SOURCE_DIR@/test/doc/hyperbolic
 EXAMPLE_PATH          += @PROJECT_SOURCE_DIR@/test/doc/ieee
 EXAMPLE_PATH          += @PROJECT_SOURCE_DIR@/test/doc/predicates
