--- a/bench/function/simd/CMakeLists.txt
+++ b/bench/function/simd/CMakeLists.txt
@@ -221,7 +221,7 @@ add_subdirectory(nearbyint)
 add_subdirectory(negate)
 add_subdirectory(negatenz)
 add_subdirectory(negif)
-add_subdirectory(negifnot)
+add_subdirectory(ifnot_neg)
 add_subdirectory(next)
 add_subdirectory(nextafter)
 add_subdirectory(none)
