--- a/test/function/scalar/CMakeLists.txt
+++ b/test/function/scalar/CMakeLists.txt
@@ -283,7 +283,7 @@ set ( SOURCES
    negate.cpp
    negatenz.cpp
    negif.cpp
-   negifnot.cpp
+   ifnot_neg.cpp
    nextafter.cpp
    next.cpp
    nextpow2.cpp
