negifnot -> ifnot_neg

--- a/bench/function/scalar/CMakeLists.txt
+++ b/bench/function/scalar/CMakeLists.txt
@@ -208,7 +208,7 @@ add_subdirectory(multiplies)
 add_subdirectory(nearbyint)
 add_subdirectory(negate)
 add_subdirectory(negatenz)
-add_subdirectory(negif)
+add_subdirectory(if_neg)
 add_subdirectory(ifnot_neg)
 add_subdirectory(next)
 add_subdirectory(nextafter)
