--- a/bench/function/simd/CMakeLists.txt
+++ b/bench/function/simd/CMakeLists.txt
@@ -220,7 +220,7 @@ add_subdirectory(nbtrue)
 add_subdirectory(nearbyint)
 add_subdirectory(negate)
 add_subdirectory(negatenz)
-add_subdirectory(negif)
+add_subdirectory(if_neg)
 add_subdirectory(ifnot_neg)
 add_subdirectory(next)
 add_subdirectory(nextafter)
