--- a/test/function/scalar/CMakeLists.txt
+++ b/test/function/scalar/CMakeLists.txt
@@ -282,7 +282,7 @@ set ( SOURCES
    nearbyint.std.cpp
    negate.cpp
    negatenz.cpp
-   negif.cpp
+   if_neg.cpp
    ifnot_neg.cpp
    nextafter.cpp
    next.cpp
