--- a/bench/function/simd/if_neg/CMakeLists.txt
+++ b/bench/function/simd/if_neg/CMakeLists.txt
@@ -6,13 +6,13 @@
 ##                            http://www.boost.org/LICENSE_1_0.txt
 ## --------------------------------------------------------------------------------------
 
-## benches for functor negif in simd mode.
+## benches for functor if_neg in simd mode.
 
 set(SOURCES
   regular.float.m10_10_m10_10.cpp
   regular.double.m10_10_m10_10.cpp
 )
 
-make_bench("function.simd.negif" ${SOURCES})
+make_bench("function.simd.if_neg" ${SOURCES})
 
 ## --------------------------------------------------------------------------------------
