[Breaking Change] Turn negif and negifnot into proper if_neg and ifnot_neg (#407)

--- a/test/function/scalar/CMakeLists.txt
+++ b/test/function/scalar/CMakeLists.txt
@@ -282,8 +282,8 @@ set ( SOURCES
    nearbyint.std.cpp
    negate.cpp
    negatenz.cpp
-   negif.cpp
-   negifnot.cpp
+   if_neg.cpp
+   ifnot_neg.cpp
    nextafter.cpp
    next.cpp
    nextpow2.cpp
