--- a/bench/function/simd/CMakeLists.txt
+++ b/bench/function/simd/CMakeLists.txt
@@ -220,8 +220,8 @@ add_subdirectory(nbtrue)
 add_subdirectory(nearbyint)
 add_subdirectory(negate)
 add_subdirectory(negatenz)
-add_subdirectory(negif)
-add_subdirectory(negifnot)
+add_subdirectory(if_neg)
+add_subdirectory(ifnot_neg)
 add_subdirectory(next)
 add_subdirectory(nextafter)
 add_subdirectory(none)
