--- a/test/function/scalar/CMakeLists.txt
+++ b/test/function/scalar/CMakeLists.txt
@@ -68,6 +68,7 @@ set ( SOURCES
    bitwise_select.cpp
    bitwise_xor.cpp
    broadcast.cpp
+   cast.cpp
    cbrt.cpp
    ceil.regular.cpp
    ceil.std.cpp
